# docs/swagger.json
@@ -1,10 +1,17 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "BookHaven Library - Travel around the world with books.",
+        "title": "BookHaven API",
+        "contact": {
+            "name": "Harya Kumuda",
+            "email": "hkkoostanto@students.hacktiv8.ac.id"
+        },
+        "version": "1.0"
     },
+    "basePath": "/",
     "paths": {
-        "/book": {
+        "/books": {
             "get": {
                 "description": "Retrieves details of all books including title, author, published year, ISBN, and available copies.",
                 "produces": [
@@ -95,7 +102,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "User"
+                    "Login Register"
                 ],
                 "summary": "Register a new user",
                 "parameters": [
@@ -142,6 +149,11 @@
         },
         "/user/balance": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Retrieves the balance of the user from the database. The user must be authenticated, and the function handles errors such as user not found or database errors.",
                 "consumes": [
                     "application/json"
@@ -192,6 +204,11 @@
         },
         "/user/book/borrow": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Allows an authenticated user to borrow a book. The user must have a balance of at least 50,000 and cannot exceed the borrowing limit of 3 books. Handles errors such as insufficient balance, exceeding borrowing limit, or book availability issues.",
                 "consumes": [
                     "application/json"
@@ -200,7 +217,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Books"
+                    "User"
                 ],
                 "summary": "Borrow a Book",
                 "parameters": [
@@ -253,6 +270,11 @@
         },
         "/user/book/check": {
             "get": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Retrieves the list of books that the user is currently borrowing. The user must be authenticated. Handles errors such as database errors and user authentication issues.",
                 "consumes": [
                     "application/json"
@@ -261,7 +283,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Books"
+                    "User"
                 ],
                 "summary": "Get Borrowed Books",
                 "responses": {
@@ -291,6 +313,11 @@
         },
         "/user/book/return": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Returns a borrowed book and calculates any late fees. If the book is returned after the allowed period, the user will be charged a late fee. The user must have sufficient balance to cover the late fee.",
                 "consumes": [
                     "application/json"
@@ -349,6 +376,11 @@
         },
         "/user/topup": {
             "post": {
+                "security": [
+                    {
+                        "JWT": []
+                    }
+                ],
                 "description": "Generates an invoice for top-up using Xendit. The user must be authenticated, and the API request includes the amount to top up. The function handles errors, processes the Xendit response, and updates the transaction history in the database.",
                 "consumes": [
                     "application/json"
@@ -529,6 +561,13 @@
                     "type": "string"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "JWT": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
