# handler/books.go
@@ -16,7 +16,7 @@ import (
 // @Produce json
 // @Success 200 {array} models.BookDto
 // @Failure 500 {object} models.ErrorResponse
-// @Router /books
+// @Router /books [get]
 func GetAllBooks(db *sql.DB, logger *logrus.Logger) echo.HandlerFunc {
 	return func(c echo.Context) error {
 		rows, err := db.Query("SELECT title, author, published_year, isbn, available_copies FROM books")
